# gaggimate-apps

./: .env.example  .gitignore  README.ja.md  README.md  docker-compose.yml  show_qr.py  start.bat  stop.bat
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  config.json  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  database.py  main.py  models.py
backend/app/prompts/: recipe_customize_system.txt  recipe_customize_user.txt  shot_improvement_system.txt  shot_improvement_user.txt
backend/app/routers/: analytics.py  beans.py  gaggimate.py  llm.py  llm_api.py  machine.py  notifications.py  prompts.py  qr.py  recipe_ai.py  recipes.py  settings.py  shots.py  webhook.py
backend/app/services/: analysis.py  gaggimate_ws.py  line_notify.py  llm.py  llm_service.py  mqtt_client.py  notification.py  prompt_manager.py
docs/: PROMPT_DESIGN.md  ROADMAP.md  SPEC.md  VERIFICATION.md
frontend/: package-lock.json  playwright.config.ts
frontend/.claude/: settings.local.json
frontend/public/: sw.js
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Layout.tsx  RecipeCard.tsx  SetupWizard.tsx  ShotChart.tsx  StarRating.tsx
frontend/src/pages/: Brewing.tsx  Compare.tsx  Dashboard.tsx  Home.tsx  Log.tsx  Logs.tsx  MobileConnect.tsx  PostShot.tsx  (+6 more)
frontend/tests/: e2e.spec.ts
simulator/: Dockerfile  gaggimate_sim.py  requirements.txt  test_client.py
tests/: test_integration.py
