[project]
name = "gaggimate-backend"
version = "0.1.0"
description = "GaggiMate連携アプリ バックエンド（FastAPI）"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=13.0",
    "pydantic>=2.0",
    "openai>=1.50",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "aiomqtt>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
push = [
    "pywebpush>=2.0",
    "py-vapid>=1.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["app*"]
